Add CHANGELOG and docs navbar links

--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "JuliaPackageTemplate"
 uuid = "7adf5606-a580-4ec5-b7a7-75603f58a1cf"
-authors = ["Josh Day <emailjoshday@gmail.com>"]
+authors = ["author <author@email.com>"]
 version = "0.1.0"
 
 [deps]
