Add changelog and coverage docs pages

--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -2,6 +2,9 @@ project:
   type: book
   output-dir: _site
 
+search:
+  type: textbox
+
 book:
   title: "JuliaPackageTemplate.jl"
   navbar:
@@ -9,16 +12,16 @@ book:
       - text: "Home"
         href: index.qmd
     right:
-      - text: "Changelog"
-        href: https://github.com/RallypointOne/JuliaPackageTemplate.jl/blob/main/CHANGELOG.md
-      - text: "Coverage"
-        href: coverage/
       - icon: github
         href: https://github.com/RallypointOne/JuliaPackageTemplate.jl
   chapters:
     - index.qmd
     - getting-started.qmd
-    - api.qmd
+    - part: "Reference"
+      chapters:
+        - api.qmd
+        - changelog.qmd
+        - coverage.qmd
 
 format:
   html:
