Add version selector and improve docs workflow

--- a/.github/workflows/Docs.yml
+++ b/.github/workflows/Docs.yml
@@ -4,22 +4,37 @@ on:
   push:
     branches:
       - main
+    tags:
+      - 'v*'
   workflow_dispatch:
 
 permissions:
-  contents: read
-  pages: write
-  id-token: write
+  contents: write
 
 concurrency:
   group: pages
-  cancel-in-progress: true
+  cancel-in-progress: false
 
 jobs:
-  build:
+  docs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
+
+      # Determine deploy target from ref
+      - name: Set deploy version
+        id: version
+        run: |
+          if [[ "$GITHUB_REF" == refs/tags/v* ]]; then
+            VERSION="${GITHUB_REF#refs/tags/}"
+            echo "version=$VERSION" >> "$GITHUB_OUTPUT"
+            echo "is_release=true" >> "$GITHUB_OUTPUT"
+          else
+            echo "version=dev" >> "$GITHUB_OUTPUT"
+            echo "is_release=false" >> "$GITHUB_OUTPUT"
+          fi
+
+      # Build docs
       - uses: julia-actions/setup-julia@v2
         with:
           version: '1'
@@ -32,16 +47,84 @@ jobs:
       - uses: quarto-dev/quarto-actions/render@v2
         with:
           path: docs
-      - uses: actions/upload-pages-artifact@v4
-        with:
-          path: docs/_site
 
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
-      - id: deployment
-        uses: actions/deploy-pages@v4
+      # Deploy to gh-pages branch
+      - name: Deploy to gh-pages
+        env:
+          VERSION: ${{ steps.version.outputs.version }}
+          IS_RELEASE: ${{ steps.version.outputs.is_release }}
+          REPO_NAME: ${{ github.event.repository.name }}
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
+          # Clone gh-pages branch or create orphan
+          if git ls-remote --exit-code origin gh-pages; then
+            git clone --branch gh-pages --single-branch "https://x-access-token:${{ github.token }}@github.com/${{ github.repository }}.git" gh-pages-deploy
+          else
+            mkdir gh-pages-deploy
+            cd gh-pages-deploy
+            git init
+            git checkout --orphan gh-pages
+            git commit --allow-empty -m "Initialize gh-pages"
+            cd ..
+          fi
+
+          # Copy built docs to version directory
+          rm -rf "gh-pages-deploy/${VERSION}"
+          cp -r docs/_site "gh-pages-deploy/${VERSION}"
+
+          cd gh-pages-deploy
+
+          # If release tag: update versions.json and stable redirect
+          if [ "$IS_RELEASE" = "true" ]; then
+            # Update versions.json
+            if [ -f versions.json ]; then
+              # Add new version and sort by semver descending
+              python3 -c "
+          import json, re
+          with open('versions.json') as f:
+              versions = json.load(f)
+          ver = '${VERSION}'
+          if ver not in versions:
+              versions.append(ver)
+          def semver_key(v):
+              nums = re.findall(r'\d+', v)
+              return tuple(int(n) for n in nums)
+          versions.sort(key=semver_key, reverse=True)
+          with open('versions.json', 'w') as f:
+              json.dump(versions, f, indent=2)
+          "
+            else
+              echo "[\"${VERSION}\"]" > versions.json
+            fi
+
+            # Update stable redirect
+            mkdir -p stable
+            cat > stable/index.html << STABLE_EOF
+          <!DOCTYPE html>
+          <html>
+          <head><meta http-equiv="refresh" content="0; url=/${REPO_NAME}/${VERSION}/"></head>
+          <body>Redirecting to <a href="/${REPO_NAME}/${VERSION}/">latest stable</a>...</body>
+          </html>
+          STABLE_EOF
+          fi
+
+          # Always update root redirect to stable
+          cat > index.html << ROOT_EOF
+          <!DOCTYPE html>
+          <html>
+          <head><meta http-equiv="refresh" content="0; url=/${REPO_NAME}/stable/"></head>
+          <body>Redirecting to <a href="/${REPO_NAME}/stable/">stable docs</a>...</body>
+          </html>
+          ROOT_EOF
+
+          touch .nojekyll
+
+          git add -A
+          if git diff --cached --quiet; then
+            echo "No changes to deploy"
+          else
+            git commit -m "Deploy docs: ${VERSION}"
+            git push "https://x-access-token:${{ github.token }}@github.com/${{ github.repository }}.git" HEAD:gh-pages
+          fi
